@@ -14,6 +14,7 @@
  *
  * Copyright 2011-2016 ForgeRock AS.
  * Portions Copyrighted 2016 Agile Digital Engineering
+ * Portions Copyrighted 2022 Wren Security
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -40,9 +41,9 @@
 
     <!-- Parent Project -->
     <parent>
-        <groupId>org.forgerock</groupId>
-        <artifactId>forgerock-parent</artifactId>
-        <version>2.0.8</version>
+        <groupId>org.wrensecurity</groupId>
+        <artifactId>wrensec-parent</artifactId>
+        <version>3.5.0</version>
     </parent>
 
     <!-- Component Definition -->
@@ -89,15 +90,18 @@
 
     <!-- Component Properties -->
     <properties>
+        <wrensec-commons.version>22.4.0</wrensec-commons.version>
+        <wrensec-guava.version>18.0.5</wrensec-guava.version>
+
         <!-- **************************************************************** -->
         <maven.build.timestamp.format>yyyy-MMM-dd HH:mm:ss</maven.build.timestamp.format>
         <!-- **************************************************************** -->
 
         <!-- Surefire Argument Line -->
-        <java.surefire.options>-Xms256m -Xmx256m -XX:MaxPermSize=96m</java.surefire.options>
+        <java.surefire.options>-Xms256m -Xmx256m</java.surefire.options>
 
         <!-- JavaDoc Setting Properties -->
-        <javadoc.options>-J-Xms2g -J-Xmx2g -J-XX:MaxPermSize=512m</javadoc.options>
+        <javadoc.options>-J-Xms2g -J-Xmx2g</javadoc.options>
         <!-- Shade plugin setting for ClientSDK build -->
         <generate.clientsdk.sources>false</generate.clientsdk.sources>
 
@@ -105,22 +109,22 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- Version Properties -->
-        <opendj.server.version>4.0.0-M1</opendj.server.version>
-        <opendj.sdk.version>4.0.0-M1</opendj.sdk.version>
-        <opendj.server.legacy>4.0.0-M1</opendj.server.legacy>
+        <wrends.server.version>4.0.0-RC1</wrends.server.version>
+        <wrends.sdk.version>4.0.0-RC1</wrends.sdk.version>
+        <wrends.server.legacy>4.0.0-RC1</wrends.server.legacy>
 
         <!-- Supress checkstyle errors on legacy com.iplanet and com.sun.identity packages -->
         <checkstyleUnitTestSuppressionsLocation>checkstyle/suppressions.xml</checkstyleUnitTestSuppressionsLocation>
 
         <forgerock.bloomfilter.version>1.0.1</forgerock.bloomfilter.version>
-        <forgerock.ui.version>15.2.6</forgerock.ui.version>
-        <forgerock.guice.version>1.1.0</forgerock.guice.version>
+        <forgerock.ui.version>22.1.0-SNAPSHOT</forgerock.ui.version>
+        <forgerock.guice.version>2.0.0</forgerock.guice.version>
 
         <javadoc-utils.version>1.0.0</javadoc-utils.version>
         <ant.contrib.version>1.0b3</ant.contrib.version>
         <guice.version>3.0</guice.version>
         <restlet.version>2.3.4</restlet.version>
-        <powermock.version>1.6.6</powermock.version>
+        <powermock.version>2.0.9</powermock.version>
         <slf4j.version>1.7.21</slf4j.version>
         <santuario.xmlsec.version>1.5.6</santuario.xmlsec.version>
         <click.version>2.3.0</click.version>
@@ -140,8 +144,8 @@
         <jaxb.version>1.0.6</jaxb.version>
         <jaxb1.version>2.0.2</jaxb1.version>
         <jaxrpc-api.version>1.1</jaxrpc-api.version>
-        <jaxrpc-impl.version>1.1.3_01-20160905</jaxrpc-impl.version>
-        <jaxrpc-spi.version>1.1.3_01</jaxrpc-spi.version>
+        <jaxrpc-impl.version>1.1.4_01-wren1</jaxrpc-impl.version>
+        <jaxrpc-spi.version>1.1.4_01-wren1</jaxrpc-spi.version>
         <jdom.version>2.0.1</jdom.version>
         <je.version>5.0.104</je.version>
         <jersey-bundle.version>1.1.1-ea</jersey-bundle.version>
@@ -357,7 +361,6 @@
                                             <failWhenParentIsSnapshot>false</failWhenParentIsSnapshot>
                                             <excludes>
                                                 <exclude>org.forgerock.openam:*</exclude>
-                                                <exclude>org.forgerock.commons:forgerock-persistit-core:*</exclude>
                                                 <exclude>org.forgerock.openig:openig-toolkit:*</exclude>
                                             </excludes>
                                         </requireReleaseDeps>
@@ -497,97 +500,59 @@
 
     <!-- Maven Repositories -->
     <repositories>
-        <!-- ForgeRock Common Internal Project Repositories -->
+
         <repository>
-            <id>forgerock-staging-repository</id>
-            <name>ForgeRock Release Repository</name>
-            <url>http://maven.forgerock.org/repo/releases</url>
+            <id>wrensecurity-releases</id>
+            <name>Wren Security Release Repository</name>
+            <url>https://wrensecurity.jfrog.io/wrensecurity/releases</url>
+
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
-        </repository>
 
-        <repository>
-            <id>forgerock-snapshots-repository</id>
-            <name>ForgeRock Snapshot Repository</name>
-            <url>http://maven.forgerock.org/repo/snapshots</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-
-        <!-- ForgeRock Internal Project Repository -->
-        <repository>
-            <id>maven.forgerock.org</id>
-            <name>maven.forgerock.org-openam-dependencies</name>
-            <url>http://maven.forgerock.org/repo/openam-dependencies</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
         </repository>
 
         <repository>
-            <id>restlet-cache</id>
-            <name>Restlet Cache Repository</name>
-            <url>http://maven.forgerock.org/repo/maven.restlet.org</url>
+            <id>wrensecurity-snapshots</id>
+            <name>Wren Security Snapshot Repository</name>
+            <url>https://wrensecurity.jfrog.io/wrensecurity/snapshots</url>
+
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+
             <releases>
-                <enabled>true</enabled>
+                <enabled>false</enabled>
             </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-
-        <repository>
-            <id>oracle-repository</id>
-            <name>Oracle Repository</name>
-            <url>http://download.oracle.com/maven</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
         </repository>
     </repositories>
-
-    <!-- For Deployment to ForgeRock Maven Repository -->
-    <distributionManagement>
-        <repository>
-            <id>maven.forgerock.org</id>
-            <name>maven.forgerock.org-releases</name>
-            <url>http://maven.forgerock.org/repo/releases</url>
-        </repository>
-        <snapshotRepository>
-            <id>maven.forgerock.org</id>
-            <name>maven.forgerock.org-snapshots</name>
-            <url>http://maven.forgerock.org/repo/snapshots</url>
-        </snapshotRepository>
-        <site>
-            <id>forgerock.org</id>
-            <name>OpenAM Project</name>
-            <url>${siteDistributionURL}</url>
-        </site>
-    </distributionManagement>
 
     <!-- Source Control -->
     <scm>
         <connection>scm:git:ssh://git@stash.forgerock.org:7999/openam/openam.git</connection>
         <developerConnection>scm:git:ssh://git@stash.forgerock.org:7999/openam/openam.git</developerConnection>
         <url>https://stash.forgerock.org/projects/OPENAM/repos/openam/browse</url>
-      <tag>release/13.0.0</tag>
-  </scm>
+        <tag>release/13.0.0</tag>
+    </scm>
 
     <!-- Dependency Management -->
     <dependencyManagement>
         <dependencies>
+            <!-- TODO: Remove org.forgerock.commons -->
             <dependency>
                 <groupId>org.forgerock.commons</groupId>
                 <artifactId>commons-bom</artifactId>
-                <version>21.0.0-alpha-23</version>
+                <version>22.1.0-SNAPSHOT</version>
+                <scope>import</scope>
+                <type>pom</type>
+            </dependency>
+            <dependency>
+                <groupId>org.wrensecurity.commons</groupId>
+                <artifactId>commons-bom</artifactId>
+                <version>${wrensec-commons.version}</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
@@ -635,17 +600,17 @@
                 <version>${project.version}</version>
             </dependency>
 
-	        <dependency>
-	        	<groupId>org.forgerock.openam</groupId>
-	        	<artifactId>openam-radius-common</artifactId>
-	        	<version>${project.version}</version>
-	        </dependency>
+            <dependency>
+                <groupId>org.forgerock.openam</groupId>
+                <artifactId>openam-radius-common</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
-	        <dependency>
-	        	<groupId>org.forgerock.openam</groupId>
-	        	<artifactId>openam-radius-server</artifactId>
-	        	<version>${project.version}</version>
-	        </dependency>
+            <dependency>
+                <groupId>org.forgerock.openam</groupId>
+                <artifactId>openam-radius-server</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.forgerock.openam</groupId>
@@ -1379,7 +1344,7 @@
             </dependency>
 
             <dependency>
-                <groupId>external</groupId>
+                <groupId>com.sun.xml.rpc</groupId>
                 <artifactId>jaxrpc-impl</artifactId>
                 <version>${jaxrpc-impl.version}</version>
             </dependency>
@@ -1583,27 +1548,27 @@
 
             <!-- OpenDJ API -->
             <dependency>
-                <groupId>org.forgerock.opendj</groupId>
+                <groupId>org.wrensecurity.wrends</groupId>
                 <artifactId>opendj-core</artifactId>
-                <version>${opendj.sdk.version}</version>
+                <version>${wrends.sdk.version}</version>
             </dependency>
             <!-- OpenDJ Grizzly -->
             <dependency>
-                <groupId>org.forgerock.opendj</groupId>
+                <groupId>org.wrensecurity.wrends</groupId>
                 <artifactId>opendj-grizzly</artifactId>
-                <version>${opendj.sdk.version}</version>
+                <version>${wrends.sdk.version}</version>
             </dependency>
             <!-- OpenDJ Server -->
             <dependency>
-                <groupId>org.forgerock.opendj</groupId>
+                <groupId>org.wrensecurity.wrends</groupId>
                 <artifactId>opendj-server</artifactId>
-                <version>${opendj.server.version}</version>
+                <version>${wrends.server.version}</version>
             </dependency>
             <!-- OpenDJ Server -->
             <dependency>
-                <groupId>org.forgerock.opendj</groupId>
+                <groupId>org.wrensecurity.wrends</groupId>
                 <artifactId>opendj-server-legacy</artifactId>
-                <version>${opendj.server.legacy}</version>
+                <version>${wrends.server.legacy}</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.slf4j</groupId>
@@ -1820,19 +1785,19 @@
                 </exclusions>
             </dependency>
             <dependency>
-                <groupId>org.forgerock.commons</groupId>
-                <artifactId>forgerock-guice-core</artifactId>
-                <version>${forgerock.guice.version}</version>
+                <groupId>org.wrensecurity.commons</groupId>
+                <artifactId>wrensec-guice-core</artifactId>
+                <version>${wrensec-commons.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.forgerock.commons</groupId>
-                <artifactId>forgerock-guice-servlet</artifactId>
-                <version>${forgerock.guice.version}</version>
+                <groupId>org.wrensecurity.commons</groupId>
+                <artifactId>wrensec-guice-servlet</artifactId>
+                <version>${wrensec-commons.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.forgerock.commons</groupId>
-                <artifactId>forgerock-guice-test</artifactId>
-                <version>${forgerock.guice.version}</version>
+                <groupId>org.wrensecurity.commons</groupId>
+                <artifactId>wrensec-guice-test</artifactId>
+                <version>${wrensec-commons.version}</version>
                 <scope>test</scope>
             </dependency>
 
@@ -1928,7 +1893,7 @@
             </dependency>
             <dependency>
                 <groupId>org.powermock</groupId>
-                <artifactId>powermock-api-mockito</artifactId>
+                <artifactId>powermock-api-mockito2</artifactId>
                 <version>${powermock.version}</version>
                 <scope>test</scope>
             </dependency>
@@ -2006,7 +1971,7 @@
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
+            <artifactId>mockito-core</artifactId>
         </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
@@ -2219,6 +2184,38 @@
 
         <pluginManagement>
             <plugins>
+                <!-- TODO: Remove this plugin settings. It is already done in wrensec-parent. -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-checkstyle-plugin</artifactId>
+                    <version>${checkstylePluginVersion}</version>
+
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.wrensecurity</groupId>
+                            <artifactId>wrensec-build-tools</artifactId>
+                            <version>${wrenBuildToolsVersion}</version>
+                        </dependency>
+
+                        <dependency>
+                            <groupId>com.puppycrawl.tools</groupId>
+                            <artifactId>checkstyle</artifactId>
+                            <version>8.41.1</version>
+                        </dependency>
+                    </dependencies>
+
+                    <configuration>
+                        <enableRSS>false</enableRSS>
+                        <configLocation>${checkstyleSourceConfigLocation}</configLocation>
+                        <headerLocation>${checkstyleHeaderLocation}</headerLocation>
+                        <suppressionsLocation>${checkstyleSuppressionsLocation}</suppressionsLocation>
+                        <includeTestSourceDirectory>true</includeTestSourceDirectory>
+
+                        <!-- Only output errors if we're not expecting any -->
+                        <consoleOutput>${checkstyleFailOnError}</consoleOutput>
+                        <failsOnError>${checkstyleFailOnError}</failsOnError>
+                    </configuration>
+                </plugin>
                 <plugin>
                     <groupId>com.github.searls</groupId>
                     <artifactId>jasmine-maven-plugin</artifactId>
@@ -2248,8 +2245,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-shade-plugin</artifactId>
-                    <!-- Local build for MSHADE-237 and MSHADE-182 -->
-                    <version>3.0.0-forgerock-alpha-1</version>
+                    <version>3.2.4</version>
                 </plugin>
                 <plugin>
                     <groupId>net.ju-n.maven.plugins</groupId>
